=== master

* Support using Dataset#eager_graph in eager load callback for associations using join tables (jeremyevans)

* Make Dataset#graph handle existing selections without determinable aliases by forcing a subselect (jeremyevans)

* Freeze prepared statement arguments before returning the prepared statement (jeremyevans)

* Refactor emulated prepared statement internals to use a placeholder literalizer (jeremyevans)

=== 5.11.0 (2018-08-01)

* Fix using the jdbc/sqlserver adapter on JRuby 9.2+ (jeremyevans)

* Fix dumping schema for numeric/decimal columns with default values, broken starting in 5.9.0 (jeremyevans)

* Recognize additional check constraint violations on certain versions of SQLite (jeremyevans)

* Use cached model instances for Model.first calls without an argument or with a single integer argument in the static_cache plugin (AlexWayfer) (#1529)

* Support ON CONFLICT clause for INSERT on SQLite 3.24+ (jeremyevans)

* Support Dataset#window for WINDOW clause on MySQL 8 and SQLAnywhere (jeremyevans)

* Enable window function support on SQLAnywhere (jeremyevans)

* Support using a hash as a window function :frame option value, with support for ROWS/RANGE/GROUPS, numeric offsets, and EXCLUDE (jeremyevans)

* Allow using set_column_default with a nil value to remove the default value for a column on MySQL when the column is NOT NULL (jeremyevans)

=== 5.10.0 (2018-07-01)

* Use input type casts when using the postgres adapter with pg 0.18+ to reduce string allocations for some primitive types used as prepared statement arguments (jeremyevans)

* Assume local time if database timezone not specified when handling BC timestamps on JRuby 9.2.0.0 in the pg_extended_date_support extension (jeremyevans)

* Fix parsing of timetz types in the jdbc/postgresql adapter (jeremyevans)

* Make SQLTime.parse respect SQLTime.date and Sequel.application_timezone (jeremyevans)

* Add :top as an option in the list plugin (celsworth) (#1526)
