@@ -1705,6 +1705,23 @@ BasicRegularAndCompositeKeyAssociations = shared_description do
     a.first.albums.must_equal [@album]
     a.first.albums.first.artist.must_equal @artist
   end
+
+  it "should be able to eager dependent eager_graph associations using eager_graph_eager" do
+    @album.update(:artist => @artist)
+    @album.add_tag(@tag)
+    
+    a = Artist.eager_graph(:albums, :first_album).eager_graph_eager([:albums], :tags, :alias_tags).all
+    a.must_equal [@artist]
+    a.first.albums.must_equal [@album]
+    a.first.first_album.must_equal @album
+    a.first.albums.first.tags.must_equal [@tag]
+    a.first.albums.first.alias_tags.must_equal [@tag]
+    
+    a = Tag.eager_graph(:albums).eager_graph_eager([:albums], :artist).all
+    a.must_equal [@tag]
+    a.first.albums.must_equal [@album]
+    a.first.albums.first.artist.must_equal @artist
+  end
 end
 
 RegularAndCompositeKeyAssociations = shared_description do
@@ -1792,6 +1809,11 @@ RegularAndCompositeKeyAssociations = shared_description do
     a.must_equal [@album]
     a.first.artist.must_equal @artist
     a.first.artist.tags.must_equal [@tag]
+
+    a = Album.eager_graph(:artist).eager_graph_eager([:artist], :tags).all
+    a.must_equal [@album]
+    a.first.artist.must_equal @artist
+    a.first.artist.tags.must_equal [@tag]
   end
 
   it "should work with a one_through_many association" do
@@ -1826,6 +1848,11 @@ RegularAndCompositeKeyAssociations = shared_description do
     a.must_equal [@album]
     a.first.artist.must_equal @artist
     a.first.artist.first_tag.must_equal @tag
+    
+    a = Album.eager_graph(:artist).eager_graph_eager([:artist], :first_tag).all
+    a.must_equal [@album]
+    a.first.artist.must_equal @artist
+    a.first.artist.first_tag.must_equal @tag
   end
 end
 
@@ -1855,6 +1882,7 @@ describe "Sequel::Model Simple Associations" do
     [:albums_tags, :tags, :albums, :artists].each{|t| @db[t].delete}
     class ::Artist < Sequel::Model(@db)
       plugin :dataset_associations
+      plugin :eager_graph_eager
       one_to_many :albums, :order=>:name
       one_to_one :first_album, :clone=>:albums
       one_to_one :second_album, :clone=>:albums, :limit=>[nil, 1]
@@ -1879,6 +1907,7 @@ describe "Sequel::Model Simple Associations" do
     end
     class ::Album < Sequel::Model(@db)
       plugin :dataset_associations
+      plugin :eager_graph_eager
       many_to_one :artist, :reciprocal=>nil
       many_to_one :a_artist, :clone=>:artist, :conditions=>{:name=>'Ar'}, :key=>:artist_id
       many_to_many :tags, :right_key=>:tag_id
@@ -1899,6 +1928,7 @@ describe "Sequel::Model Simple Associations" do
     end
     class ::Tag < Sequel::Model(@db)
       plugin :dataset_associations
+      plugin :eager_graph_eager
       many_to_many :albums
       plugin :many_through_many
       many_through_many :tags, [[:albums_tags, :tag_id, :album_id], [:albums, :id, :artist_id], [:albums, :artist_id, :id], [:albums_tags, :album_id, :tag_id]], :class=>:Tag
@@ -2156,6 +2186,7 @@ describe "Sequel::Model Composite Key Associations" do
     [:albums_tags, :tags, :albums, :artists].each{|t| @db[t].delete}
     class ::Artist < Sequel::Model(@db)
       plugin :dataset_associations
+      plugin :eager_graph_eager
       set_primary_key [:id1, :id2]
       unrestrict_primary_key
       one_to_many :albums, :key=>[:artist_id1, :artist_id2], :order=>:name
@@ -2182,6 +2213,7 @@ describe "Sequel::Model Composite Key Associations" do
     end
     class ::Album < Sequel::Model(@db)
       plugin :dataset_associations
+      plugin :eager_graph_eager
       set_primary_key [:id1, :id2]
       unrestrict_primary_key
       many_to_one :artist, :key=>[:artist_id1, :artist_id2], :reciprocal=>nil
@@ -2204,6 +2236,7 @@ describe "Sequel::Model Composite Key Associations" do
     end
     class ::Tag < Sequel::Model(@db)
       plugin :dataset_associations
+      plugin :eager_graph_eager
       set_primary_key [:id1, :id2]
       unrestrict_primary_key
       many_to_many :albums, :right_key=>[:album_id1, :album_id2], :left_key=>[:tag_id1, :tag_id2]
@@ -2313,6 +2346,7 @@ describe "Sequel::Model pg_array_to_many" do
     [:tags, :albums, :artists].each{|t| @db[t].delete}
     class ::Artist < Sequel::Model(@db)
       plugin :dataset_associations
+      plugin :eager_graph_eager
       one_to_many :albums, :order=>:name
       one_to_one :first_album, :clone=>:albums
       one_to_many :a_albums, :clone=>:albums do |ds| ds.where(:name=>'Al') end
@@ -2321,6 +2355,7 @@ describe "Sequel::Model pg_array_to_many" do
     class ::Album < Sequel::Model(@db)
       plugin :dataset_associations
       plugin :pg_array_associations
+      plugin :eager_graph_eager
       many_to_one :artist, :reciprocal=>nil
       many_to_one :a_artist, :clone=>:artist, :key=>:artist_id do |ds| ds.where(:name=>'Ar') end
       pg_array_to_many :tags, :key=>:tag_ids, :save_after_modify=>true
@@ -2335,6 +2370,7 @@ describe "Sequel::Model pg_array_to_many" do
     class ::Tag < Sequel::Model(@db)
       plugin :dataset_associations
       plugin :pg_array_associations
+      plugin :eager_graph_eager
       many_to_pg_array :albums
     end
     @album = Album.create(:name=>'Al')
@@ -2394,6 +2430,7 @@ describe "Sequel::Model many_to_pg_array" do
     [:tags, :albums, :artists].each{|t| @db[t].delete}
     class ::Artist < Sequel::Model(@db)
       plugin :dataset_associations
+      plugin :eager_graph_eager
       one_to_many :albums, :order=>:name
       one_to_one :first_album, :class=>:Album, :order=>:name
       one_to_many :a_albums, :clone=>:albums do |ds| ds.where(:name=>'Al') end
@@ -2402,6 +2439,7 @@ describe "Sequel::Model many_to_pg_array" do
     class ::Album < Sequel::Model(@db)
       plugin :dataset_associations
       plugin :pg_array_associations
+      plugin :eager_graph_eager
       many_to_one :artist, :reciprocal=>nil
       many_to_one :a_artist, :clone=>:artist, :key=>:artist_id do |ds| ds.where(:name=>'Ar') end
       many_to_pg_array :tags
@@ -2416,6 +2454,7 @@ describe "Sequel::Model many_to_pg_array" do
     class ::Tag < Sequel::Model(@db)
       plugin :dataset_associations
       plugin :pg_array_associations
+      plugin :eager_graph_eager
       pg_array_to_many :albums, :save_after_modify=>true
     end
     @album = Album.create(:name=>'Al')
